# photo-privacy

./: .dockerignore  .gitignore  .mailmap  Dockerfile  LICENSE  README.md  app.py  build_mac.sh  face_processor.py  launcher.py  pyproject.toml  requirements.txt  tests_test_face_processor.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-16-uv-migration.md  2026-05-11-readme-improvement.md
docs/superpowers/specs/: 2026-04-16-uv-migration-design.md  2026-05-11-readme-improvement-design.md
templates/: index.html
